Финишные редакции скриптов по анализу брака

--- a/Аналитика_базы_данных/Finish_files/4.3 Объединение номер акта + дата.ipynb
+++ b/Аналитика_базы_данных/Finish_files/4.3 Объединение номер акта + дата.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,12 @@
     "file = '//Server/otk/Support_files_не_удалять!!!/Претензии_даты для ПЭО.xlsx'\n",
     "\n",
     "df = pd.read_excel(\n",
-    "    file, usecols=[\"Номер акта исследования\", \"Дата акта исследования\", \"Дата поступления сообщения в ОТК\"]\n",
+    "    file, \n",
+    "    usecols=[\n",
+    "        \"Номер акта исследования\", \n",
+    "        \"Дата акта исследования\", \n",
+    "        \"Дата поступления сообщения в ОТК\"\n",
+    "    ]\n",
     ")\n",
     "\n",
     "df[\"Дата акта исследования\"] = df[\"Дата акта исследования\"].apply(lambda x: x.replace(x[6:8], \"\"))\n",
@@ -20,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -52,33 +57,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>785</td>\n",
-       "      <td>15.08.24</td>\n",
-       "      <td>24.07.24</td>\n",
+       "      <td>646</td>\n",
+       "      <td>10.07.24</td>\n",
+       "      <td>21.06.24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>786</td>\n",
-       "      <td>15.08.24</td>\n",
-       "      <td>24.07.24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>787</td>\n",
-       "      <td>15.08.24</td>\n",
-       "      <td>24.07.24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>788</td>\n",
-       "      <td>15.08.24</td>\n",
-       "      <td>24.07.24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>789</td>\n",
-       "      <td>15.08.24</td>\n",
-       "      <td>24.07.24</td>\n",
+       "      <td>652</td>\n",
+       "      <td>10.07.24</td>\n",
+       "      <td>21.06.24</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -86,21 +73,15 @@
       ],
       "text/plain": [
        "   Номер акта исследования Дата акта исследования  \\\n",
-       "0                      785               15.08.24   \n",
-       "1                      786               15.08.24   \n",
-       "2                      787               15.08.24   \n",
-       "3                      788               15.08.24   \n",
-       "4                      789               15.08.24   \n",
+       "0                      646               10.07.24   \n",
+       "1                      652               10.07.24   \n",
        "\n",
        "  Дата поступления сообщения в ОТК  \n",
-       "0                         24.07.24  \n",
-       "1                         24.07.24  \n",
-       "2                         24.07.24  \n",
-       "3                         24.07.24  \n",
-       "4                         24.07.24  "
+       "0                         21.06.24  \n",
+       "1                         21.06.24  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,18 +101,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "785 от 15.08.24\n",
-      "786 от 15.08.24\n",
-      "787 от 15.08.24\n",
-      "788 от 15.08.24\n",
-      "789 от 15.08.24\n"
+      "646 от 10.07.24\n",
+      "652 от 10.07.24\n"
      ]
     }
    ],
@@ -142,18 +120,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "24.07.24\n",
-      "24.07.24\n",
-      "24.07.24\n",
-      "24.07.24\n",
-      "24.07.24\n"
+      "21.06.24\n",
+      "21.06.24\n"
      ]
     }
    ],
