--- a/Аналитика_базы_данных/Finish_files/Проверка наличия акта в Журнале претензий.ipynb
+++ b/Аналитика_базы_данных/Finish_files/Проверка наличия акта в Журнале претензий.ipynb
@@ -308,7 +308,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.2 ('base_venv': venv)",
+   "display_name": "base_venv",
    "language": "python",
    "name": "python3"
   },
@@ -322,14 +322,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.11.1"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "879bcfca1c9c4d8762be18e1e3486d9f9be337292eb3573feb891f4e6ef4740f"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
