--- a/Аналитика_базы_данных/Finish_files/Справка по рекламациям за период.ipynb
+++ b/Аналитика_базы_данных/Finish_files/Справка по рекламациям за период.ipynb
@@ -296,7 +296,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "analys_base_venv",
+   "display_name": "base_venv",
    "language": "python",
    "name": "python3"
   },
@@ -310,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
