Актуализирован проект по анализу браковок

--- a/Анализ_браковок/4.1 ТНО и не-ТНО по месяцам года_trening.ipynb
+++ b/Анализ_браковок/4.1 ТНО и не-ТНО по месяцам года_trening.ipynb
@@ -17,14 +17,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year = 2025  # год по которому делаем анализ\n",
+    "\n",
+    "now = datetime.now()  # получаем текущую дату\n",
+    "year_now = now.year  # сохраняем текущий год"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "# считываем данные из файла Excel и создаем фрейм\n",
     "df = pd.read_excel(\n",
-    "    \"//Server/otk/2 ИННА/Списание БРАКА по ЦЕХАМ/ЖУРНАЛ УЧЕТА актов о браке_2020-2024.xlsx\",\n",
-    "    sheet_name=\"2024\",\n",
+    "    f\"//Server/otk/2 ИННА/Списание БРАКА по ЦЕХАМ/ЖУРНАЛ УЧЕТА актов о браке_2020-{year_now}.xlsx\",\n",
+    "    sheet_name=str(year),\n",
     "    usecols=[\n",
     "        \"Дата_регистрации_акта_НП\",\n",
     "        \"Наименование_детали\",\n",
@@ -1775,7 +1787,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "brakoves_venv",
+   "display_name": "brak_venv",
    "language": "python",
    "name": "python3"
   },
