Проверка проекта Анализ браковок

--- a/Анализ_браковок/4.1 ТНО и не-ТНО по месяцам года_trening.ipynb
+++ b/Анализ_браковок/4.1 ТНО и не-ТНО по месяцам года_trening.ipynb
@@ -1787,7 +1787,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "brak_venv",
+   "display_name": "brakoves_venv",
    "language": "python",
    "name": "python3"
   },
